tests/ui/de-enum-data.stderr
error: Enum variants with unnamed associated data aren't supported by the Deserr derive macro.
 --> tests/ui/de-enum-data.rs:6:12
  |
6 |     Variant(i32),
  |            ^^^^^
